Practica-03-DEBERES/bin/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones main

   2  definiciones :
   3               | definiciones definicion

   4  definicion : variable
   5             | funcion

   6  funcion : DEF ID '(' parametros ')' ':' tipoReturn body

   7  main : DEF MAIN '(' ')' ':' VOID body

   8  body : '{' variables sentencias '}'
   9       | '{' '}'

  10  sentencia : RETURN expression ';'
  11            | while
  12            | print
  13            | input
  14            | if
  15            | ifSimple
  16            | invocation ';'
  17            | assignment

  18  invocation : ID '(' expressiones ')'

  19  assignment : expression '=' expression ';'

  20  if : IF expression ':' sentencia ELSE sentencia
  21     | IF expression ':' sentencia ELSE '{' sentencias '}'
  22     | IF expression ':' '{' sentencias '}' ELSE sentencia
  23     | IF expression ':' '{' sentencias '}' ELSE '{' sentencias '}'

  24  ifSimple : IF expression ':' sentencia
  25           | IF expression ':' '{' sentencias '}'

  26  sentencias : sentencia
  27             | sentencias sentencia

  28  parametros : parametrosAUX
  29             |

  30  parametrosAUX : parametro
  31                | parametrosAUX ',' parametro

  32  parametro : ID ':' tipo

  33  variables : variable
  34            | variables variable

  35  variable : ident ':' tipo ';'
  36           | struct

  37  ident : ID
  38        | ident ',' ID

  39  tipo : INT
  40       | DOUBLE
  41       | CHAR
  42       | '[' INT_CONSTANT ']' tipo

  43  tipoReturn : tipo
  44             | VOID

  45  struct : ident ':' STRUCT '{' bodyStruct '}' ';'

  46  bodyStruct : variable
  47             | bodyStruct variable

  48  expressiones : expression
  49               | expressiones ',' expression
  50               |

  51  expression : expression '+' expression
  52             | expression '-' expression
  53             | expression '*' expression
  54             | expression '/' expression
  55             | expression '%' expression
  56             | expression '.' expression
  57             | '(' expression ')'
  58             | expression '[' expression ']'
  59             | '!' expression
  60             | '-' expression
  61             | expression '>' expression
  62             | expression '<' expression
  63             | expression DISTINTO expression
  64             | expression MAYORIGUAL expression
  65             | expression MENORIGUAL expression
  66             | expression EQUIVALENTE expression
  67             | expression AND expression
  68             | expression OR expression
  69             | REAL_CONSTANT
  70             | INT_CONSTANT
  71             | CHAR_CONSTANT
  72             | ID
  73             | cast
  74             | invocation

  75  cast : '(' tipo ')' expression

  76  while : WHILE expression ':' '{' sentencias '}'

  77  print : PRINT expressiones ';'

  78  input : INPUT expression ';'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . main  (1)
	definiciones : definiciones . definicion  (3)

	ID  shift 3
	DEF  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	variable  goto 7
	funcion  goto 8
	ident  goto 9
	struct  goto 10


state 3
	ident : ID .  (37)

	.  reduce 37


state 4
	funcion : DEF . ID '(' parametros ')' ':' tipoReturn body  (6)
	main : DEF . MAIN '(' ')' ':' VOID body  (7)

	ID  shift 11
	MAIN  shift 12
	.  error


state 5
	programa : definiciones main .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : variable .  (4)

	.  reduce 4


state 8
	definicion : funcion .  (5)

	.  reduce 5


state 9
	variable : ident . ':' tipo ';'  (35)
	ident : ident . ',' ID  (38)
	struct : ident . ':' STRUCT '{' bodyStruct '}' ';'  (45)

	':'  shift 13
	','  shift 14
	.  error


state 10
	variable : struct .  (36)

	.  reduce 36


state 11
	funcion : DEF ID . '(' parametros ')' ':' tipoReturn body  (6)

	'('  shift 15
	.  error


state 12
	main : DEF MAIN . '(' ')' ':' VOID body  (7)

	'('  shift 16
	.  error


state 13
	variable : ident ':' . tipo ';'  (35)
	struct : ident ':' . STRUCT '{' bodyStruct '}' ';'  (45)

	INT  shift 17
	DOUBLE  shift 18
	CHAR  shift 19
	STRUCT  shift 20
	'['  shift 21
	.  error

	tipo  goto 22


state 14
	ident : ident ',' . ID  (38)

	ID  shift 23
	.  error


state 15
	funcion : DEF ID '(' . parametros ')' ':' tipoReturn body  (6)
	parametros : .  (29)

	ID  shift 24
	')'  reduce 29

	parametros  goto 25
	parametrosAUX  goto 26
	parametro  goto 27


state 16
	main : DEF MAIN '(' . ')' ':' VOID body  (7)

	')'  shift 28
	.  error


state 17
	tipo : INT .  (39)

	.  reduce 39


state 18
	tipo : DOUBLE .  (40)

	.  reduce 40


state 19
	tipo : CHAR .  (41)

	.  reduce 41


state 20
	struct : ident ':' STRUCT . '{' bodyStruct '}' ';'  (45)

	'{'  shift 29
	.  error


state 21
	tipo : '[' . INT_CONSTANT ']' tipo  (42)

	INT_CONSTANT  shift 30
	.  error


state 22
	variable : ident ':' tipo . ';'  (35)

	';'  shift 31
	.  error


state 23
	ident : ident ',' ID .  (38)

	.  reduce 38


state 24
	parametro : ID . ':' tipo  (32)

	':'  shift 32
	.  error


state 25
	funcion : DEF ID '(' parametros . ')' ':' tipoReturn body  (6)

	')'  shift 33
	.  error


state 26
	parametros : parametrosAUX .  (28)
	parametrosAUX : parametrosAUX . ',' parametro  (31)

	','  shift 34
	')'  reduce 28


state 27
	parametrosAUX : parametro .  (30)

	.  reduce 30


state 28
	main : DEF MAIN '(' ')' . ':' VOID body  (7)

	':'  shift 35
	.  error


state 29
	struct : ident ':' STRUCT '{' . bodyStruct '}' ';'  (45)

	ID  shift 3
	.  error

	variable  goto 36
	ident  goto 9
	struct  goto 10
	bodyStruct  goto 37


state 30
	tipo : '[' INT_CONSTANT . ']' tipo  (42)

	']'  shift 38
	.  error


state 31
	variable : ident ':' tipo ';' .  (35)

	.  reduce 35


state 32
	parametro : ID ':' . tipo  (32)

	INT  shift 17
	DOUBLE  shift 18
	CHAR  shift 19
	'['  shift 21
	.  error

	tipo  goto 39


state 33
	funcion : DEF ID '(' parametros ')' . ':' tipoReturn body  (6)

	':'  shift 40
	.  error


state 34
	parametrosAUX : parametrosAUX ',' . parametro  (31)

	ID  shift 24
	.  error

	parametro  goto 41


state 35
	main : DEF MAIN '(' ')' ':' . VOID body  (7)

	VOID  shift 42
	.  error


state 36
	bodyStruct : variable .  (46)

	.  reduce 46


state 37
	struct : ident ':' STRUCT '{' bodyStruct . '}' ';'  (45)
	bodyStruct : bodyStruct . variable  (47)

	ID  shift 3
	'}'  shift 43
	.  error

	variable  goto 44
	ident  goto 9
	struct  goto 10


state 38
	tipo : '[' INT_CONSTANT ']' . tipo  (42)

	INT  shift 17
	DOUBLE  shift 18
	CHAR  shift 19
	'['  shift 21
	.  error

	tipo  goto 45


state 39
	parametro : ID ':' tipo .  (32)

	.  reduce 32


state 40
	funcion : DEF ID '(' parametros ')' ':' . tipoReturn body  (6)

	INT  shift 17
	DOUBLE  shift 18
	CHAR  shift 19
	VOID  shift 46
	'['  shift 21
	.  error

	tipoReturn  goto 47
	tipo  goto 48


state 41
	parametrosAUX : parametrosAUX ',' parametro .  (31)

	.  reduce 31


state 42
	main : DEF MAIN '(' ')' ':' VOID . body  (7)

	'{'  shift 49
	.  error

	body  goto 50


state 43
	struct : ident ':' STRUCT '{' bodyStruct '}' . ';'  (45)

	';'  shift 51
	.  error


state 44
	bodyStruct : bodyStruct variable .  (47)

	.  reduce 47


state 45
	tipo : '[' INT_CONSTANT ']' tipo .  (42)

	.  reduce 42


state 46
	tipoReturn : VOID .  (44)

	.  reduce 44


state 47
	funcion : DEF ID '(' parametros ')' ':' tipoReturn . body  (6)

	'{'  shift 49
	.  error

	body  goto 52


state 48
	tipoReturn : tipo .  (43)

	.  reduce 43


state 49
	body : '{' . variables sentencias '}'  (8)
	body : '{' . '}'  (9)

	ID  shift 3
	'}'  shift 53
	.  error

	variable  goto 54
	variables  goto 55
	ident  goto 9
	struct  goto 10


state 50
	main : DEF MAIN '(' ')' ':' VOID body .  (7)

	.  reduce 7


state 51
	struct : ident ':' STRUCT '{' bodyStruct '}' ';' .  (45)

	.  reduce 45


state 52
	funcion : DEF ID '(' parametros ')' ':' tipoReturn body .  (6)

	.  reduce 6


state 53
	body : '{' '}' .  (9)

	.  reduce 9


state 54
	variables : variable .  (33)

	.  reduce 33


state 55
	body : '{' variables . sentencias '}'  (8)
	variables : variables . variable  (34)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 58
	CHAR_CONSTANT  shift 59
	INPUT  shift 60
	PRINT  shift 61
	WHILE  shift 62
	IF  shift 63
	RETURN  shift 64
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	variable  goto 68
	sentencias  goto 69
	sentencia  goto 70
	expression  goto 71
	while  goto 72
	print  goto 73
	input  goto 74
	if  goto 75
	ifSimple  goto 76
	invocation  goto 77
	assignment  goto 78
	ident  goto 9
	struct  goto 10
	cast  goto 79


state 56
	expression : INT_CONSTANT .  (70)

	.  reduce 70


state 57
	expression : REAL_CONSTANT .  (69)

	.  reduce 69


state 58
	invocation : ID . '(' expressiones ')'  (18)
	ident : ID .  (37)
	expression : ID .  (72)

	'('  shift 80
	MENORIGUAL  reduce 72
	MAYORIGUAL  reduce 72
	EQUIVALENTE  reduce 72
	DISTINTO  reduce 72
	OR  reduce 72
	AND  reduce 72
	'='  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	'.'  reduce 72
	'['  reduce 72
	':'  reduce 37
	','  reduce 37


state 59
	expression : CHAR_CONSTANT .  (71)

	.  reduce 71


state 60
	input : INPUT . expression ';'  (78)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 82
	invocation  goto 83
	cast  goto 79


state 61
	print : PRINT . expressiones ';'  (77)
	expressiones : .  (50)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	';'  reduce 50
	','  reduce 50

	expression  goto 84
	invocation  goto 83
	expressiones  goto 85
	cast  goto 79


state 62
	while : WHILE . expression ':' '{' sentencias '}'  (76)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 86
	invocation  goto 83
	cast  goto 79


state 63
	if : IF . expression ':' sentencia ELSE sentencia  (20)
	if : IF . expression ':' sentencia ELSE '{' sentencias '}'  (21)
	if : IF . expression ':' '{' sentencias '}' ELSE sentencia  (22)
	if : IF . expression ':' '{' sentencias '}' ELSE '{' sentencias '}'  (23)
	ifSimple : IF . expression ':' sentencia  (24)
	ifSimple : IF . expression ':' '{' sentencias '}'  (25)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 87
	invocation  goto 83
	cast  goto 79


state 64
	sentencia : RETURN . expression ';'  (10)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 88
	invocation  goto 83
	cast  goto 79


state 65
	expression : '-' . expression  (60)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 89
	invocation  goto 83
	cast  goto 79


state 66
	expression : '!' . expression  (59)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 90
	invocation  goto 83
	cast  goto 79


state 67
	expression : '(' . expression ')'  (57)
	cast : '(' . tipo ')' expression  (75)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	INT  shift 17
	DOUBLE  shift 18
	CHAR  shift 19
	'-'  shift 65
	'!'  shift 66
	'['  shift 21
	'('  shift 67
	.  error

	expression  goto 91
	invocation  goto 83
	tipo  goto 92
	cast  goto 79


state 68
	variables : variables variable .  (34)

	.  reduce 34


state 69
	body : '{' variables sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (27)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	INPUT  shift 60
	PRINT  shift 61
	WHILE  shift 62
	IF  shift 63
	RETURN  shift 64
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	'}'  shift 93
	.  error

	sentencia  goto 94
	expression  goto 71
	while  goto 72
	print  goto 73
	input  goto 74
	if  goto 75
	ifSimple  goto 76
	invocation  goto 77
	assignment  goto 78
	cast  goto 79


state 70
	sentencias : sentencia .  (26)

	.  reduce 26


state 71
	assignment : expression . '=' expression ';'  (19)
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'='  shift 101
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	.  error


state 72
	sentencia : while .  (11)

	.  reduce 11


state 73
	sentencia : print .  (12)

	.  reduce 12


state 74
	sentencia : input .  (13)

	.  reduce 13


state 75
	sentencia : if .  (14)

	.  reduce 14


state 76
	sentencia : ifSimple .  (15)

	.  reduce 15


state 77
	sentencia : invocation . ';'  (16)
	expression : invocation .  (74)

	';'  shift 111
	MENORIGUAL  reduce 74
	MAYORIGUAL  reduce 74
	EQUIVALENTE  reduce 74
	DISTINTO  reduce 74
	OR  reduce 74
	AND  reduce 74
	'='  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'.'  reduce 74
	'['  reduce 74


state 78
	sentencia : assignment .  (17)

	.  reduce 17


state 79
	expression : cast .  (73)

	.  reduce 73


state 80
	invocation : ID '(' . expressiones ')'  (18)
	expressiones : .  (50)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	')'  reduce 50
	','  reduce 50

	expression  goto 84
	invocation  goto 83
	expressiones  goto 112
	cast  goto 79


state 81
	invocation : ID . '(' expressiones ')'  (18)
	expression : ID .  (72)

	'('  shift 80
	MENORIGUAL  reduce 72
	MAYORIGUAL  reduce 72
	EQUIVALENTE  reduce 72
	DISTINTO  reduce 72
	OR  reduce 72
	AND  reduce 72
	'='  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	'+'  reduce 72
	'-'  reduce 72
	'*'  reduce 72
	'/'  reduce 72
	'%'  reduce 72
	'.'  reduce 72
	'['  reduce 72
	']'  reduce 72
	')'  reduce 72
	':'  reduce 72
	';'  reduce 72
	','  reduce 72


state 82
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)
	input : INPUT expression . ';'  (78)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	';'  shift 113
	.  error


state 83
	expression : invocation .  (74)

	.  reduce 74


state 84
	expressiones : expression .  (48)
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	')'  reduce 48
	';'  reduce 48
	','  reduce 48


state 85
	expressiones : expressiones . ',' expression  (49)
	print : PRINT expressiones . ';'  (77)

	';'  shift 114
	','  shift 115
	.  error


state 86
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)
	while : WHILE expression . ':' '{' sentencias '}'  (76)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	':'  shift 116
	.  error


state 87
	if : IF expression . ':' sentencia ELSE sentencia  (20)
	if : IF expression . ':' sentencia ELSE '{' sentencias '}'  (21)
	if : IF expression . ':' '{' sentencias '}' ELSE sentencia  (22)
	if : IF expression . ':' '{' sentencias '}' ELSE '{' sentencias '}'  (23)
	ifSimple : IF expression . ':' sentencia  (24)
	ifSimple : IF expression . ':' '{' sentencias '}'  (25)
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	':'  shift 117
	.  error


state 88
	sentencia : RETURN expression . ';'  (10)
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	';'  shift 118
	.  error


state 89
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : '-' expression .  (60)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	MENORIGUAL  reduce 60
	MAYORIGUAL  reduce 60
	EQUIVALENTE  reduce 60
	DISTINTO  reduce 60
	OR  reduce 60
	AND  reduce 60
	'='  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	']'  reduce 60
	')'  reduce 60
	':'  reduce 60
	';'  reduce 60
	','  reduce 60


state 90
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : expression . '[' expression ']'  (58)
	expression : '!' expression .  (59)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	'.'  shift 109
	'['  shift 110
	MENORIGUAL  reduce 59
	MAYORIGUAL  reduce 59
	EQUIVALENTE  reduce 59
	DISTINTO  reduce 59
	OR  reduce 59
	AND  reduce 59
	'='  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'*'  reduce 59
	'/'  reduce 59
	'%'  reduce 59
	']'  reduce 59
	')'  reduce 59
	':'  reduce 59
	';'  reduce 59
	','  reduce 59


state 91
	expression : expression . '+' expression  (51)
	expression : expression . '-' expression  (52)
	expression : expression . '*' expression  (53)
	expression : expression . '/' expression  (54)
	expression : expression . '%' expression  (55)
	expression : expression . '.' expression  (56)
	expression : '(' expression . ')'  (57)
	expression : expression . '[' expression ']'  (58)
	expression : expression . '>' expression  (61)
	expression : expression . '<' expression  (62)
	expression : expression . DISTINTO expression  (63)
	expression : expression . MAYORIGUAL expression  (64)
	expression : expression . MENORIGUAL expression  (65)
	expression : expression . EQUIVALENTE expression  (66)
	expression : expression . AND expression  (67)
	expression : expression . OR expression  (68)

	MENORIGUAL  shift 95
	MAYORIGUAL  shift 96
	EQUIVALENTE  shift 97
	DISTINTO  shift 98
	OR  shift 99
	AND  shift 100
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'.'  shift 109
	'['  shift 110
	')'  shift 119
	.  error


state 92
	cast : '(' tipo . ')' expression  (75)

	')'  shift 120
	.  error


state 93
	body : '{' variables sentencias '}' .  (8)

	.  reduce 8


state 94
	sentencias : sentencias sentencia .  (27)

	.  reduce 27


state 95
	expression : expression MENORIGUAL . expression  (65)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 121
	invocation  goto 83
	cast  goto 79


state 96
	expression : expression MAYORIGUAL . expression  (64)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 122
	invocation  goto 83
	cast  goto 79


state 97
	expression : expression EQUIVALENTE . expression  (66)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 123
	invocation  goto 83
	cast  goto 79


state 98
	expression : expression DISTINTO . expression  (63)

	INT_CONSTANT  shift 56
	REAL_CONSTANT  shift 57
	ID  shift 81
	CHAR_CONSTANT  shift 59
	'-'  shift 65
	'!'  shift 66
	'('  shift 67
	.  error

	expression  goto 124
	invocation  goto 83
	cast  goto 79


state 99
	expression : expression OR . expression  (68)
